<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reservation.ReservationStep4Fragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manager_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/card_add"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_credit_card_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_card"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />
    <TextView
        android:id="@+id/input_card_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/card_number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_credit_card_text_view" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/edit_text_box"
        android:id="@+id/input_credit_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_card_number_text_view"
        app:layout_constraintStart_toStartOf="@id/input_card_number_text_view">

        <EditText
            android:id="@+id/num_first_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:hint="@string/_0000"
            android:maxLength="4"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num_second_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:hint="@string/_0000"
            android:maxLength="4"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num_third_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:hint="@string/_0000"
            android:maxLength="4"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num_fourth_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:hint="@string/_0000"
            android:maxLength="4"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/input_card_number_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:textColor="@color/red"
        android:text="@string/error_card_number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_credit_card_layout"
        app:layout_constraintBottom_toTopOf="@id/input_card_expire_day_text_view"/>

    <TextView
        android:id="@+id/input_card_expire_day_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/expire_day"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_card_number_error_text_view" />

    <EditText
        android:background="@drawable/edit_text_box"
        android:id="@+id/expire_day_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="5"
        android:hint="@string/yy_mm"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="@id/input_card_expire_day_text_view"
        app:layout_constraintTop_toBottomOf="@id/input_card_expire_day_text_view" />
    <TextView
        android:id="@+id/input_expire_day_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:textColor="@color/red"
        android:text="@string/error_expired_day"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expire_day_edit_text"
        app:layout_constraintBottom_toTopOf="@id/input_card_password_text_view"/>
    <TextView
        android:id="@+id/input_card_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/card_password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_expire_day_error_text_view" />



    <EditText
        android:background="@drawable/edit_text_box"
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="5"
        android:hint="@string/front_two_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="@id/input_card_password_text_view"
        app:layout_constraintTop_toBottomOf="@id/input_card_password_text_view" />
    <TextView
        android:id="@+id/input_password_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:textColor="@color/red"
        android:text="@string/error_password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>

    <TextView
        android:id="@+id/input_card_birth_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/birth"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password_error_text_view" />

    <EditText
        android:background="@drawable/edit_text_box"
        android:id="@+id/birth_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="5"
        android:hint="@string/card_birth"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:maxLength="6"
        app:layout_constraintStart_toStartOf="@id/input_card_birth_text_view"
        app:layout_constraintTop_toBottomOf="@id/input_card_birth_text_view" />


    <TextView
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
